Defined environment variables

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
 DB_NAME=desafio
+
+# JWT
+
+JWT_SECRET=topSecretO5
+
+# APP PORT
+
+APP_PORT=3000
